@@ -1,3 +1,4 @@
+1/3/2011 #2624, Credits dialog: read credits from translated strings file, fix hyperlinks, add KSU-specific code
 1/3/2011 #2640, update About dialog copyright to 2011
 12-30-2010: #2624, major rewrite of CreditsDialog (messy, difficult to extend), added stubs for Translation credits
 12-23-2010: in Property<T>, changed defaultValue to initialValue, and made getInitialValue public
